<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".wellcome.WellcomeActivity">

    <ImageView
        android:id="@+id/welcomePhoto"
        android:layout_width="250dp"
        android:layout_height="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        tools:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/welcomeAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomePhoto"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        tools:text="@string/age"/>

    <TextView
        android:id="@+id/welcomeBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeAge"
        android:layout_marginTop="8dp"
        tools:text="@string/birthday"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/logOut"/>

</androidx.constraintlayout.widget.ConstraintLayout>